Now has the option for 2.5 components (coupled disk).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ import("magicaxis")
 importFrom("graphics", "image", "legend")
 importFrom("stats", "median", "smooth.spline")
 importFrom("utils", "packageVersion")
+importFrom("celestial", "cosdistLumDist")
