--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ProFuse
 Type: Package
 Title: Physical Multi-Band Fitting
-Version: 0.1.4
-Date: 2021-08-27
+Version: 0.1.5
+Date: 2021-09-01
 Author: Aaron Robotham
 Maintainer: Aaron Robotham <aaron.robotham@uwa.edu.au>
 Description: This package combines all of the ProTools into a powerful physical model of a galaxy. ProFound + ProFit + ProSpect = ProFuse.
@@ -10,6 +10,6 @@ License: LGPL-3
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.6)
-Imports: ProFit (>= 2.2.0), ProFound (>= 1.17.12), ProSpect (>= 1.1.5), ParmOff (>= 0.1.1), Highlander (>= 0.2.0), magicaxis
+Imports: ProFit (>= 2.2.1), ProFound (>= 1.17.12), ProSpect (>= 1.1.5), ParmOff (>= 0.1.1), Highlander (>= 0.2.0), magicaxis, celestial
 Suggests: Rfits, knitr, rmarkdown, ProTools
 VignetteBuilder: knitr
